crates/state/tests/snapshots/state_foundation__managed_resource_tracks_record_desired_and_installed_state.snap
---
source: crates/state/tests/state_foundation.rs
expression: database.managed_resource_tracks()?
---
[
    ManagedResourceTrackRecord {
        resource_name: "redis",
        track: "7.2",
        desired_state: Installed,
        installed_version: Some(
            "7.2.5-pv1",
        ),
        current_artifact_path: Some(
            "/Users/example/.pv/resources/redis/7.2/releases/7.2.5-pv1",
        ),
        env: {},
        usage_count: 0,
        removal_prune: false,
        removal_force: false,
        updated_at: "<timestamp>",
    },
]
