crates/state/tests/snapshots/state_foundation__migration_backup_retention_keeps_the_latest_five_backups.snap
---
source: crates/state/tests/state_foundation.rs
assertion_line: 167
expression: backup_table_counts
---
[
    3,
    4,
    5,
    6,
    7,
]
