crates/state/tests/snapshots/state_foundation__pending_migrations_roll_back_as_one_batch_when_later_migration_fails.snap
---
source: crates/state/tests/state_foundation.rs
assertion_line: 219
expression: "(table_exists(&connection, \"second_table\")?,\napplied_migration_count(&connection)?)"
---
(
    false,
    1,
)
